# glwiz

./: AUTHORS  CODESTYLE.rst  CONTRIBUTING.rst  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
configs/: .vimrc  .zshrc  iptables.rules  settings.json
doc/: CODESTYLE.rst  CONTRIBUTING.rst
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/glwiz/: all.html  fn.gnu_linux_default_setup.html  index.html
docs/glwiz/functionality/: index.html  sidebar-items.js
docs/gnulinwiz/: all.html  fn.gnu_linux_default_setup.html  index.html  sidebar-items.js
docs/gnulinwiz/functionality/: index.html
docs/search.desc/glwiz/: glwiz-desc-0-.js
docs/search.desc/gnulinwiz/: gnulinwiz-desc-0-.js
docs/src/glwiz/: functionality.rs.html  lib.rs.html
docs/src/gnulinwiz/: functionality.rs.html  lib.rs.html
releazes/v0.1.0/: gnulinwiz_v0.1.0_x86⁄x64_arch_linux.tar.gz.sha256  gnulinwiz_v0.1.0_x86⁄x64_arch_linux.tar.gz.sha512
releazes/v0.2.0/: gnulinwiz_v0.2.0_stable_x86⁄x64_archlinux.tar.gz.sha256  gnulinwiz_v0.2.0_stable_x86⁄x64_archlinux.tar.gz.sha512
releazes/v1.0.0/: gnulinwiz_v1.0.0_x86⁄x64.tar.gz.sha256  gnulinwiz_v1.0.0_x86⁄x64.tar.gz.sha512
releazes/v1.0.1/: gnulinwiz_v1.0.1_x86⁄x64.tar.gz.sha256  gnulinwiz_v1.0.1_x86⁄x64.tar.gz.sha512
src/: functionality.rs  lib.rs  main.rs  prog_fun.rs  setup_fun.rs
src/functionality/: commands.rs  configs.rs  env.rs  iptables.rs  prog_fun.rs  setup_fun.rs  shell.rs  software.rs  task.rs  user_cfg.rs  zram.rs
(+111 files in other folders)
