[package]
name = "gnulinwiz"
version = "1.0.0"
edition = "2021"
authors = ["Andrew Kushyk <akushyk799 at gmail.com>"]
description = "gnulinwiz (GNU/Linux Config Wizard) The ultimate post-installation setup assistant for GNU/Linux, streamlining your configuration process with ease and precision."
license = "AGPL-3.0-or-later"
repository = "https://gitlab.com/git-user-cpp/gnulinwiz"

[dependencies]
libc = "0.2"
colored = "3"
clap = { version = "4.5", features = ["derive"] }

[lib]
name = "gnulinwiz"
path = "src/lib.rs"